@@ -10,7 +10,9 @@ import com.openwebstart.jvm.runtimes.RemoteJavaRuntime;
 import com.openwebstart.jvm.ui.RuntimeManagerPanel;
 import com.openwebstart.jvm.ui.dialogs.DialogFactory;
 import com.openwebstart.jvm.ui.dialogs.RuntimeDownloadDialog;
+import com.openwebstart.jvm.util.JvmVersionUtils;
 import com.openwebstart.launcher.JavaRuntimeProvider;
+import net.adoptopenjdk.icedteaweb.i18n.Translator;
 import net.adoptopenjdk.icedteaweb.jnlp.version.VersionString;
 import spark.Spark;
 
@@ -24,7 +26,6 @@ import javax.swing.JTextField;
 import javax.swing.SwingUtilities;
 import java.awt.Dimension;
 import java.awt.GridLayout;
-import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
@@ -39,9 +40,10 @@ import static com.openwebstart.jvm.runtimes.Vendor.ANY_VENDOR;
 public class JvmManagerDemo {
 
     public static void main(String[] args) throws Exception {
+        Translator.addBundle("i18n");
 
         RuntimeManagerConfig.setSupportedVersionRange(VersionString.fromString("1.8*"));
-        RuntimeManagerConfig.setDefaultRemoteEndpoint(new URI("http://localhost:8090/jvms"));
+        RuntimeManagerConfig.setDefaultRemoteEndpoint(new URL("http://localhost:8090/jvms"));
         RuntimeManagerConfig.setNonDefaultServerAllowed(true);
         RuntimeManagerConfig.setDefaultVendor(ANY_VENDOR.getName());
 
@@ -144,7 +146,7 @@ public class JvmManagerDemo {
 
         requestButton.addActionListener(event -> Executors.newSingleThreadExecutor().execute(() -> {
             try {
-                final VersionString version = VersionString.fromString(requestedVersionField.getText());
+                final VersionString version = JvmVersionUtils.fromJnlp(VersionString.fromString(requestedVersionField.getText()));
                 final URL serverEndpoint = new URL(requestedEndpointField.getText());
                 final LocalJavaRuntime runtime = javaRuntimeProvider.getJavaRuntime(version, serverEndpoint);
 
